testing heroku deploy

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,9 @@
   <body>
 
     <div class="container">
-      <h1 id="code"></h1>
+      <h1>Google oAuth Code</h1>
+      <p>If automatic auth fails store this somewhere.</p>
+      <h3 id="code"></h3>
     </div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
